largest element of the array

--- a/C PLUS PLUS  PROGRAMMING/.vscode/launch.json
+++ b/C PLUS PLUS  PROGRAMMING/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/Github all folfers/Hacker Rank Codes/C PROGRAMMING",
-      "program": "d:/Github all folfers/Hacker Rank Codes/C PROGRAMMING/build/Debug/outDebug",
+      "cwd": "d:/Github all folfers/Hacker Rank Codes/C PLUS PLUS  PROGRAMMING",
+      "program": "d:/Github all folfers/Hacker Rank Codes/C PLUS PLUS  PROGRAMMING/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
